--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.8",
     "jest": "^29.5.0",
+    "mock-stdin": "^1.0.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
